--- a/kasten-cel/k10-validate-ns-by-preset-label/k10-validate-ns-by-preset-label.yaml
+++ b/kasten-cel/k10-validate-ns-by-preset-label/k10-validate-ns-by-preset-label.yaml
@@ -4,12 +4,12 @@ kind: ClusterPolicy
 metadata:
   name: k10-validate-ns-by-preset-label
   annotations:
-    policies.kyverno.io/title: Validate Data Protection by Preset Label
-    policies.kyverno.io/category: Kasten K10 by Veeam
+    policies.kyverno.io/title: Validate Data Protection by Preset Label in CEL expressions
+    policies.kyverno.io/category: Kasten K10 by Veeam in CEL 
     policies.kyverno.io/subject: Namespace
-    kyverno.io/kyverno-version: 1.9.0
-    policies.kyverno.io/minversion: 1.9.0
-    kyverno.io/kubernetes-version: "1.23"
+    kyverno.io/kyverno-version: 1.11.0
+    policies.kyverno.io/minversion: 1.11.0
+    kyverno.io/kubernetes-version: "1.26-1.27"
     policies.kyverno.io/description: >-
       Kubernetes applications are typically deployed into a single, logical namespace. 
       Kasten K10 policies will discover and protect all resources within the selected namespace(s). 
@@ -27,14 +27,13 @@ spec:
           kinds:
           - Namespace
     validate:
-      message: >-
-        Namespaces must specify a "dataprotection" label with a value corresponding to a Kasten K10 SLA:
-        
-          "gold" - <Insert human readable settings of each preset option>
-          "silver" - <For example, hourly backups, exported to immutable S3 storage>
-          "bronze" - <Or, daily local snapshots, NOT exported to external storage>
-          "none" - No local snapshots or backups
-      pattern:
-        metadata:
-          labels:
-            dataprotection: gold|silver|bronze|none
+      cel:
+        expressions:
+          - expression: "has(object.metadata.labels) && has(object.metadata.labels.dataprotection) && object.metadata.labels.dataprotection in ['gold', 'silver', 'bronze', 'none']"
+            message: >-
+              Namespaces must specify a "dataprotection" label with a value corresponding to a Kasten K10 SLA:
+
+                "gold" - <Insert human readable settings of each preset option>
+                "silver" - <For example, hourly backups, exported to immutable S3 storage>
+                "bronze" - <Or, daily local snapshots, NOT exported to external storage>
+                "none" - No local snapshots or backups
