add CI tests for cel directories
Signed-off-by: Chandan-DK <chandandk468@gmail.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -41,9 +41,12 @@ jobs:
           - ^istio-cel$
           - ^karpenter$
           - ^kasten$
+          - ^kasten-cel$
           - ^kubecost$
+          - ^kubecost-cel$
           - ^kubeops$
           - ^kubevirt$
+          - ^kubevirt-cel$
           - ^linkerd$
           - ^nginx-ingress$
           - ^openshift$
