setup vap generation in CI for testing
Signed-off-by: Chandan-DK <chandandk468@gmail.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -112,3 +112,79 @@ jobs:
         run: |
           set -e
           chainsaw test --config .chainsaw.yaml --include-test-regex '^chainsaw$/${{ matrix.tests }}' --no-color=false
+  
+  validatingadmissionpolicies-v1alpha1:
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        k8s-version:
+          - name: v1.27
+            version: v1.27.10
+        tests:
+          - ^pod-security-cel$
+    name: ${{ matrix.k8s-version.name }} - validating-admission-policies - ${{ matrix.tests }}
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@44c2b7a8a4ea60a981eaca3cf939b5f4305c123b # v4.1.5
+      - name: Create kind cluster
+        uses: helm/kind-action@0025e74a8c7512023d06dc019c617aa3cf561fde # v1.10.0
+        with:
+          node_image: kindest/node:${{ matrix.k8s-version.version }}
+          cluster_name: kind
+          config: ./.github/scripts/config/kind/vap-v1alpha1.yaml
+      - name: Install latest kyverno with VAP generation enabled
+        run: ./.github/scripts/config/generate-validating-admission-policy/install-kyverno.sh
+      - name: Wait for kyverno ready
+        run: |
+          set -e
+          kubectl wait --namespace kyverno --for=condition=ready pod --selector '!job-name' --timeout=120s
+      - name: Install CRDs
+        run: |
+          set -e
+          kubectl apply -f ./.chainsaw/crds
+      - name: Install Chainsaw
+        uses: kyverno/action-install-chainsaw@748066cc1580718e7924c9b689a8d366bde05100 # v0.2.0
+      - name: Test with Chainsaw
+        run: |
+          set -e
+          chainsaw test --config .chainsaw.yaml  --include-test-regex '^chainsaw$/${{ matrix.tests }}' --test-file='chainsaw-test-vap' --no-color=false
+        
+  k8s-version-specific-tests-above-1-28:
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        k8s-version:
+          - name: v1.28
+            version: v1.28.7
+          - name: v1.29
+            version: v1.29.2
+        tests:
+          - ^pod-security-cel$
+    name: ${{ matrix.k8s-version.name }} - validating-admission-policies - ${{ matrix.tests }}
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@44c2b7a8a4ea60a981eaca3cf939b5f4305c123b # v4.1.5
+      - name: Create kind cluster
+        uses: helm/kind-action@0025e74a8c7512023d06dc019c617aa3cf561fde # v1.10.0
+        with:
+          node_image: kindest/node:${{ matrix.k8s-version.version }}
+          cluster_name: kind
+          config: ./.github/scripts/config/kind/vap-v1beta1.yaml
+      - name: Install latest kyverno with VAP generation enabled
+        run: ./.github/scripts/config/generate-validating-admission-policy/install-kyverno.sh
+      - name: Wait for kyverno ready
+        run: |
+          set -e
+          kubectl wait --namespace kyverno --for=condition=ready pod --selector '!job-name' --timeout=60s
+      - name: Install CRDs
+        run: |
+          set -e
+          kubectl apply -f ./.chainsaw/crds
+      - name: Install Chainsaw
+        uses: kyverno/action-install-chainsaw@748066cc1580718e7924c9b689a8d366bde05100 # v0.2.0
+      - name: Test with Chainsaw
+        run: |
+          set -e
+          chainsaw test --config .chainsaw.yaml  --include-test-regex '^chainsaw$/${{ matrix.tests }}' --test-file='chainsaw-test-vap' --no-color=false
