--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -47,10 +47,14 @@ jobs:
           - ^nginx-ingress$
           - ^openshift$
           - ^other$/^a
+          - ^other-cel$/^a
           - ^other$/^[b-d]
+          - ^other-cel$/^[b-d]
           - ^other$/^[e-l]
           - ^other$/^[m-q]
+          - ^other-cel$/^[m-q]
           - ^other$/^re[c-q]
+          - ^other-cel$/^re[c-q]
           - ^other$/^res
           - ^other$/^[s-z]
           - ^other-cel$/^[m-q]
