use assert in vap file names
Signed-off-by: Chandan-DK <chandandk468@gmail.com>

--- a/pod-security-cel/restricted/restrict-volume-types/.chainsaw-test/chainsaw-test-vap.yaml
+++ b/pod-security-cel/restricted/restrict-volume-types/.chainsaw-test/chainsaw-test-vap.yaml
@@ -25,9 +25,9 @@ spec:
   - name: step-02
     try:
     - assert:
-        file: validatingadmissionpolicy.yaml
+        file: vap-assert.yaml
     - assert:
-        file: validatingadmissionpolicybinding.yaml
+        file: vapbinding-assert.yaml
   - name: step-03
     try:
     - apply:
