--- a/other-cel/require-emptydir-requests-limits/.kyverno-test/resource-pass.yaml
+++ b/other-cel/require-emptydir-requests-limits/.kyverno-test/resource-pass.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: pass-pod
+  name: pass-pod-01
 spec:
   containers:
     - image: gcr.io/hello-world:1.0
@@ -17,3 +17,22 @@ spec:
   volumes:
     - name: vol
       emptyDir: {}
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: pass-pod-02
+spec:
+  containers:
+    - image: gcr.io/hello-world:1.0
+      name: test
+      volumeMounts:
+        - mountPath: /cache/data
+          name: vol
+        - mountPath: /cache/data2
+          name: vo2
+  volumes:
+    - name: vol
+      emptyDir:
+        sizeLimit: 1Gi
+
