--- a/other-cel/require-non-root-groups/require-non-root-groups.yaml
+++ b/other-cel/require-non-root-groups/require-non-root-groups.yaml
@@ -3,12 +3,12 @@ kind: ClusterPolicy
 metadata:
   name: require-non-root-groups
   annotations:
-    policies.kyverno.io/title: Require Non-Root Groups
-    policies.kyverno.io/category: Sample, EKS Best Practices
+    policies.kyverno.io/title: Require Non-Root Groups in CEL expressions
+    policies.kyverno.io/category: Sample, EKS Best Practices in CEL 
     policies.kyverno.io/severity: medium
-    policies.kyverno.io/minversion: 1.3.6
-    kyverno.io/kyverno-version: 1.6.0
-    kyverno.io/kubernetes-version: "1.22-1.23"
+    policies.kyverno.io/minversion: 1.11.0
+    kyverno.io/kyverno-version: 1.11.0
+    kyverno.io/kubernetes-version: "1.26-1.27"
     policies.kyverno.io/subject: Pod
     policies.kyverno.io/description: >-
       Containers should be forbidden from running with a root primary or supplementary GID.
@@ -16,7 +16,7 @@ metadata:
       greater than zero (i.e., non root). A known issue prevents a policy such as this
       using `anyPattern` from being persisted properly in Kubernetes 1.23.0-1.23.2.
 spec:
-  validationFailureAction: audit
+  validationFailureAction: Audit
   background: true
   rules:
     - name: check-runasgroup
@@ -26,35 +26,25 @@ spec:
             kinds:
               - Pod
       validate:
-        message: >-
-          Running with root group IDs is disallowed. The fields
-          spec.securityContext.runAsGroup, spec.containers[*].securityContext.runAsGroup,
-          spec.initContainers[*].securityContext.runAsGroup, and
-          spec.ephemeralContainers[*].securityContext.runAsGroup must be
-          set to a value greater than zero.
-        anyPattern:
-        - spec:
-            securityContext:
-              runAsGroup: ">0"
-            =(ephemeralContainers):
-              - =(securityContext):
-                  =(runAsGroup): ">0"
-            =(initContainers):
-              - =(securityContext):
-                  =(runAsGroup): ">0"
-            containers:
-              - =(securityContext):
-                  =(runAsGroup): ">0"
-        - spec:
-            =(ephemeralContainers):
-              - securityContext:
-                  runAsGroup: ">0"
-            =(initContainers):
-              - securityContext:
-                  runAsGroup: ">0"
-            containers:
-              - securityContext:
-                  runAsGroup: ">0"
+        cel:
+          variables:
+            - name: allContainers
+              expression: "(object.spec.containers + (has(object.spec.initContainers) ? object.spec.initContainers : []) + (has(object.spec.ephemeralContainers) ? object.spec.ephemeralContainers : []))"
+          expressions:
+            - expression: >-
+                (
+                  has(object.spec.securityContext) && has(object.spec.securityContext.runAsGroup) && (object.spec.securityContext.runAsGroup > 0) &&
+                  variables.allContainers.all(container, !has(container.securityContext) || !has(container.securityContext.runAsGroup) || container.securityContext.runAsGroup > 0)
+                ) ||
+                (
+                  variables.allContainers.all(container, has(container.securityContext) && has(container.securityContext.runAsGroup) && container.securityContext.runAsGroup > 0) 
+                )
+              message: >-
+                Running with root group IDs is disallowed. The fields
+                spec.securityContext.runAsGroup, spec.containers[*].securityContext.runAsGroup,
+                spec.initContainers[*].securityContext.runAsGroup, and
+                spec.ephemeralContainers[*].securityContext.runAsGroup must be
+                set to a value greater than zero.
     - name: check-supplementalgroups
       match:
         any:
@@ -62,14 +52,15 @@ spec:
             kinds:
               - Pod
       validate:
-        message: >-
-          Containers cannot run with a root primary or supplementary GID. The field
-          spec.securityContext.supplementalGroups must be unset or
-          set to a value greater than zero.
-        pattern:
-          spec:
-            =(securityContext):
-              =(supplementalGroups): ">0"
+        cel:
+          expressions:
+            - expression: >-
+                !has(object.spec.securityContext) || !has(object.spec.securityContext.supplementalGroups) || 
+                object.spec.securityContext.supplementalGroups.all(group, group > 0)
+              message: >-
+                Containers cannot run with a root primary or supplementary GID. The field
+                spec.securityContext.supplementalGroups must be unset or
+                set to a value greater than zero.
     - name: check-fsgroup
       match:
         any:
@@ -77,10 +68,12 @@ spec:
             kinds:
               - Pod
       validate:
-        message: >-
-          Containers cannot run with a root primary or supplementary GID. The field
-          spec.securityContext.fsGroup must be unset or set to a value greater than zero.
-        pattern:
-          spec:
-            =(securityContext):
-              =(fsGroup): ">0"
+        cel:
+          expressions:
+            - expression: >-
+                !has(object.spec.securityContext) || !has(object.spec.securityContext.fsGroup) || 
+                object.spec.securityContext.fsGroup > 0
+              message: >-
+                Containers cannot run with a root primary or supplementary GID. The field
+                spec.securityContext.fsGroup must be unset or set to a value greater than zero.
+
