--- a/other-cel/require-qos-guaranteed/require-qos-guaranteed.yaml
+++ b/other-cel/require-qos-guaranteed/require-qos-guaranteed.yaml
@@ -3,10 +3,12 @@ kind: ClusterPolicy
 metadata:
   name: require-qos-guaranteed
   annotations:
-    policies.kyverno.io/title: Require QoS Guaranteed
-    policies.kyverno.io/category: Other, Multi-Tenancy
+    policies.kyverno.io/title: Require QoS Guaranteed in CEL expressions
+    policies.kyverno.io/category: Other, Multi-Tenancy in CEL 
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Pod
+    kyverno.io/kyverno-version: 1.11.0
+    kyverno.io/kubernetes-version: "1.26-1.27"
     policies.kyverno.io/description: >-
       Pod Quality of Service (QoS) is a mechanism to ensure Pods receive certain
       priority guarantees based upon the resources they define. When Pods define both
@@ -17,7 +19,7 @@ metadata:
       intention that users will need to control its scope by using
       exclusions, preconditions, and other policy language mechanisms.
 spec:
-  validationFailureAction: audit
+  validationFailureAction: Audit
   background: true
   rules:
   - name: guaranteed
@@ -27,14 +29,16 @@ spec:
           kinds:
           - Pod
     validate:
-      message: "All containers must define memory and CPU requests and limits where they are equal."
-      foreach:
-      - list: "request.object.spec.containers"
-        pattern:
-          resources:
-            requests:
-              cpu: "?*"
-              memory: "?*"
-            limits:
-              cpu: "{{element.resources.requests.cpu}}"
-              memory: "{{element.resources.requests.memory}}"
+      cel:
+        expressions:
+          - expression: >-
+              object.spec.containers.all(container,
+              has(container.resources) && 
+              has(container.resources.requests) &&
+              has(container.resources.requests.cpu) && has(container.resources.requests.memory) &&
+              has(container.resources.limits) && 
+              has(container.resources.limits.cpu) && has(container.resources.limits.memory) &&
+              container.resources.requests.cpu == container.resources.limits.cpu &&
+              container.resources.requests.memory == container.resources.limits.memory)
+            message: "All containers must define memory and CPU requests and limits where they are equal."
+
