--- a/other-cel/restrict-edit-for-endpoints/restrict-edit-for-endpoints.yaml
+++ b/other-cel/restrict-edit-for-endpoints/restrict-edit-for-endpoints.yaml
@@ -3,12 +3,12 @@ kind: ClusterPolicy
 metadata:
   name: restrict-edit-for-endpoints
   annotations:
-    policies.kyverno.io/title: Restrict Edit for Endpoints CVE-2021-25740
-    policies.kyverno.io/category: Security
+    policies.kyverno.io/title: Restrict Edit for Endpoints CVE-2021-25740 in CEL expressions
+    policies.kyverno.io/category: Security in CEL 
     policies.kyverno.io/severity: low
     policies.kyverno.io/subject: ClusterRole
-    kyverno.io/kyverno-version: 1.9.0
-    kyverno.io/kubernetes-version: "1.24"
+    kyverno.io/kyverno-version: 1.11.0
+    kyverno.io/kubernetes-version: "1.26-1.27"
     policies.kyverno.io/description: >-
       Clusters not initially installed with Kubernetes 1.22 may be vulnerable to an issue
       defined in CVE-2021-25740 which could enable users to send network traffic to locations
@@ -18,7 +18,7 @@ metadata:
       to CVE-2021-25740 by ensuring the system:aggregate-to-edit ClusterRole does not have
       the edit permission of Endpoints.
 spec:
-  validationFailureAction: audit
+  validationFailureAction: Audit
   background: true
   rules:
     - name: system-aggregate-to-edit-check
@@ -30,12 +30,10 @@ spec:
             names:
             - system:aggregate-to-edit
       validate:
-        message: >-
-          This cluster may still be vulnerable to CVE-2021-25740. The system:aggregate-to-edit ClusterRole
-          should not have edit permission over Endpoints.
-        deny:
-          conditions:
-            all:
-            - key: edit
-              operator: AnyIn
-              value: "{{ request.object.rules[?resources[?contains(@,'endpoints')]].verbs[] }}"
+        cel:
+          expressions:
+            - expression: "!object.rules.exists(rule, 'endpoints' in rule.resources && 'edit' in rule.verbs)"
+              message: >-
+                This cluster may still be vulnerable to CVE-2021-25740. The system:aggregate-to-edit ClusterRole
+                should not have edit permission over Endpoints.
+
