--- a/other-cel/restrict-jobs/restrict-jobs.yaml
+++ b/other-cel/restrict-jobs/restrict-jobs.yaml
@@ -3,12 +3,12 @@ kind: ClusterPolicy
 metadata:
   name: restrict-jobs
   annotations:
-    policies.kyverno.io/title: Restrict Jobs
-    policies.kyverno.io/category: Other
+    policies.kyverno.io/title: Restrict Jobs in CEL expressions
+    policies.kyverno.io/category: Other in CEL 
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Job
-    kyverno.io/kyverno-version: 1.10.0
-    kyverno.io/kubernetes-version: "1.26"
+    kyverno.io/kyverno-version: 1.12.1
+    kyverno.io/kubernetes-version: "1.26-1.27"
     policies.kyverno.io/description: >-
       Jobs can be created directly and indirectly via a CronJob controller.
       In some cases, users may want to only allow Jobs if they are created via a CronJob.
@@ -22,11 +22,12 @@ spec:
         - resources:
             kinds:
               - Job
-      preconditions:
-        any:
-          - key: "{{ request.object.metadata.ownerReferences[0].kind || '' }}"
-            operator: NotEquals
-            value: CronJob
+      celPreconditions:
+        - name: "not-created-by-cronjob"
+          expression: "!has(object.metadata.ownerReferences) || object.metadata.ownerReferences[0].kind != 'CronJob'"
       validate:
-        message: Jobs are only allowed if spawned from CronJobs.
-        deny: {}
+        cel:
+          expressions:
+            - expression: "false"
+              message: Jobs are only allowed if spawned from CronJobs.
+
