test file modified
Signed-off-by: siddhikhapare <siddhikhapare77@gmail.com>

--- a/other/copy-namespace-labels/.chainsaw-test/chainsaw-test.yaml
+++ b/other/copy-namespace-labels/.chainsaw-test/chainsaw-test.yaml
@@ -40,4 +40,4 @@ spec:
               spec:
                 containers:
                 - name: my-app02-deploy
-                  image: nginx:1.25
+                  image: busybox:1.35
