Updated require-image-checksum.yaml policy to extend for init and ephemeral containers

--- a/other/require-image-checksum/require-image-checksum.yaml
+++ b/other/require-image-checksum/require-image-checksum.yaml
@@ -27,4 +27,11 @@ spec:
       pattern:
         spec:
           containers:
-          - image: "*@*"
+          - (name): "*"
+            image: "*@sha256:*"
+          =(ephemeralContainers):
+            - =(name): "*"
+              image: "*@sha256:*"
+          =(initContainers):
+            - =(name): "*"
+              image: "*@sha256:*"        
