Updated the policy to account for wildcards

--- a/other/restrict-clusterrole-mutating-validating-admission-webhooks/restrict-clusterrole-mutating-validating-admission-webhooks.yaml
+++ b/other/restrict-clusterrole-mutating-validating-admission-webhooks/restrict-clusterrole-mutating-validating-admission-webhooks.yaml
@@ -41,3 +41,19 @@ spec:
               - create
               - update
               - patch
+      - list: "request.object.rules[]"
+        deny:
+          conditions:
+            all:
+            - key: "{{ element.apiGroups || '' }}"
+              operator: AnyIn
+              value:
+              - admissionregistration.k8s.io
+            - key: "{{ element.resources || '' }}"
+              operator: AnyIn
+              value:
+              - mutatingwebhookconfigurations
+              - validatingwebhookconfigurations
+            - key: "{{ contains(element.verbs[], '*') }}"
+              operator: Equals
+              value: true                 
