--- a/other-cel/restrict-node-label-creation/restrict-node-label-creation.yaml
+++ b/other-cel/restrict-node-label-creation/restrict-node-label-creation.yaml
@@ -3,10 +3,11 @@ kind: ClusterPolicy
 metadata:
   name: restrict-node-label-creation
   annotations:
-    policies.kyverno.io/title: Restrict node label creation
-    policies.kyverno.io/category: Sample
+    policies.kyverno.io/title: Restrict node label creation in CEL expressions
+    policies.kyverno.io/category: Sample in CEL 
     policies.kyverno.io/subject: Node, Label
-    policies.kyverno.io/minversion: 1.6.0
+    kyverno.io/kyverno-version: 1.12.1
+    kyverno.io/kubernetes-version: "1.26-1.27"
     policies.kyverno.io/description: >-
       Node labels are critical pieces of metadata upon which many other applications and
       logic may depend and should not be altered or removed by regular users. Many cloud
@@ -17,7 +18,7 @@ metadata:
       requires, at minimum, one of the following versions of Kubernetes:
       v1.18.18, v1.19.10, v1.20.6, or v1.21.0.
 spec:
-  validationFailureAction: enforce
+  validationFailureAction: Enforce
   background: false
   rules:
   - name: prevent-label-set
@@ -26,14 +27,14 @@ spec:
       - resources:
           kinds:
           - Node
-    preconditions:
-      all:
-      - key: "{{request.operation || 'BACKGROUND'}}"
-        operator: Equals
-        value: UPDATE
-      - key: "{{request.object.metadata.labels.foo || '' }}"
-        operator: Equals
-        value: "?*"
+    celPreconditions: 
+      - name: "operation-should-be-update"
+        expression: "request.operation == 'UPDATE'"
+      - name: "has-foo-label"
+        expression: "has(object.metadata.labels) && 'foo' in object.metadata.labels"
     validate:
-      message: "Setting the `foo` label on a Node is not allowed."
-      deny: {}
+      cel:
+        expressions:
+          - expression: "false"
+            message: "Setting the `foo` label on a Node is not allowed."
+
