convert restrict-pod-controller-serviceaccount-updates
Signed-off-by: Chandan-DK <chandandk468@gmail.com>

--- a/other-cel/restrict-pod-controller-serviceaccount-updates/restrict-pod-controller-serviceaccount-updates.yaml
+++ b/other-cel/restrict-pod-controller-serviceaccount-updates/restrict-pod-controller-serviceaccount-updates.yaml
@@ -3,12 +3,12 @@ kind: ClusterPolicy
 metadata:
   name: restrict-pod-controller-serviceaccount-updates
   annotations:
-    policies.kyverno.io/title: Restrict Pod Controller ServiceAccount Updates
-    policies.kyverno.io/category: Other
+    policies.kyverno.io/title: Restrict Pod Controller ServiceAccount Updates in CEL Expressions
+    policies.kyverno.io/category: Other in CEL 
     policies.kyverno.io/severity: Medium
     policies.kyverno.io/subject: Pod
-    kyverno.io/kyverno-version: 1.9.0
-    kyverno.io/kubernetes-version: "1.24"
+    kyverno.io/kyverno-version: 1.12.1
+    kyverno.io/kubernetes-version: "1.26-1.27"
     policies.kyverno.io/description: >-
       ServiceAccounts which have the ability to edit/patch workloads which they created
       may potentially use that privilege to update to a different ServiceAccount with higher
@@ -16,7 +16,7 @@ metadata:
       to Pod controllers if those updates modify the serviceAccountName field. Updates to Pods
       directly for this field are not possible as it is immutable once set.
 spec:
-  validationFailureAction: audit
+  validationFailureAction: Audit
   background: true
   rules:
     - name: block-serviceaccount-updates
@@ -30,37 +30,30 @@ spec:
             - StatefulSet
             - ReplicaSet
             - ReplicationController
-      preconditions:
-        all:
-        - key: "{{ request.operation }}"
-          operator: Equals
-          value: UPDATE
+      celPreconditions: 
+      - name: "operation-should-be-update"
+        expression: "request.operation == 'UPDATE'"
       validate:
-        message: >-
-          The serviceAccountName field may not be changed once created.
-        deny:
-          conditions:
-            all:
-            - key: "{{ request.object.spec.template.spec.serviceAccountName || 'empty'}}"
-              operator: NotEquals
-              value: "{{ request.oldObject.spec.template.spec.serviceAccountName || 'empty'}}"
+        cel:
+          expressions:
+            - expression: >-
+                object.spec.template.spec.?serviceAccountName.orValue('empty') == oldObject.spec.template.spec.?serviceAccountName.orValue('empty')
+              message: >-
+                The serviceAccountName field may not be changed once created.
     - name: block-serviceaccount-updates-cronjob
       match:
         any:
         - resources:
             kinds:
             - CronJob
-      preconditions:
-        all:
-        - key: "{{ request.operation }}"
-          operator: Equals
-          value: UPDATE
+      celPreconditions: 
+      - name: "operation-should-be-update"
+        expression: "request.operation == 'UPDATE'"
       validate:
+        cel:
+          expressions:
+            - expression: >-
+                object.spec.jobTemplate.spec.template.spec.?serviceAccountName.orValue('empty') == oldObject.spec.jobTemplate.spec.template.spec.?serviceAccountName.orValue('empty')
         message: >-
           The serviceAccountName field may not be changed once created.
-        deny:
-          conditions:
-            all:
-            - key: "{{ request.object.spec.jobTemplate.spec.template.spec.serviceAccountName || 'empty'}}"
-              operator: NotEquals
-              value: "{{ request.oldObject.spec.jobTemplate.spec.template.spec.serviceAccountName || 'empty'}}"
+
