updated cleanup-empty-replicasets policies with timebound
Signed-off-by: Anudeep Nalla <anudeep.nalla@nirmata.com>

--- a/cleanup/cleanup-empty-replicasets/cleanup-empty-replicasets.yaml
+++ b/cleanup/cleanup-empty-replicasets/cleanup-empty-replicasets.yaml
@@ -1,9 +1,9 @@
 apiVersion: kyverno.io/v2alpha1
 kind: ClusterCleanupPolicy
 metadata:
-  name: cleanup-empty-replicasets-with-timebound
+  name: cleanup-empty-replicasets
   annotations:
-    policies.kyverno.io/title: Cleanup ReplicaSets 
+    policies.kyverno.io/title: Cleanup Empty ReplicaSets 
     policies.kyverno.io/category: Other
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: ReplicaSet
