--- a/linkerd-cel/prevent-linkerd-pod-injection-override/prevent-linkerd-pod-injection-override.yaml
+++ b/linkerd-cel/prevent-linkerd-pod-injection-override/prevent-linkerd-pod-injection-override.yaml
@@ -3,17 +3,19 @@ kind: ClusterPolicy
 metadata:
   name: prevent-linkerd-pod-injection-override
   annotations:
-    policies.kyverno.io/title: Prevent Linkerd Pod Injection Override
-    policies.kyverno.io/category: Linkerd
+    policies.kyverno.io/title: Prevent Linkerd Pod Injection Override in CEL expressions
+    policies.kyverno.io/category: Linkerd in CEL 
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Pod
+    kyverno.io/kyverno-version: 1.11.0
+    kyverno.io/kubernetes-version: "1.26-1.27"
     policies.kyverno.io/description: >-
       Setting the annotation on a Pod (or its controller) `linkerd.io/inject` to
       `disabled` may effectively disable mesh participation for that workload reducing
       security and visibility. This policy prevents setting the annotation `linkerd.io/inject`
       to `disabled` for Pods.
 spec:
-  validationFailureAction: audit
+  validationFailureAction: Audit
   background: true
   rules:
   - name: pod-injection-override
@@ -23,8 +25,8 @@ spec:
           kinds:
           - Pod
     validate:
-      message: "Pods may not disable sidecar injection."
-      pattern:
-        metadata:
-          =(annotations):
-            =(linkerd.io/inject): "!disabled"
+      cel:
+        expressions:
+          - expression: "!has(object.metadata.annotations) || !('linkerd.io/inject' in object.metadata.annotations) || object.metadata.annotations['linkerd.io/inject'] != 'disabled'"
+            message: "Pods may not disable sidecar injection."
+
