add metadata section to template
This is done in order to avoid no such key: metadata error in the
kyverno tests for the cel policy

Signed-off-by: Chandan-DK <chandandk468@gmail.com>

--- a/linkerd-cel/prevent-linkerd-pod-injection-override/.chainsaw-test/good-podcontrollers.yaml
+++ b/linkerd-cel/prevent-linkerd-pod-injection-override/.chainsaw-test/good-podcontrollers.yaml
@@ -49,6 +49,9 @@ spec:
   jobTemplate:
     spec:
       template:
+        metadata:
+          labels:
+            app: busybox
         spec:
           containers:
           - name: hello
