--- a/linkerd-cel/prevent-linkerd-port-skipping/.chainsaw-test/bad-pod.yaml
+++ b/linkerd-cel/prevent-linkerd-port-skipping/.chainsaw-test/bad-pod.yaml
@@ -3,7 +3,7 @@ kind: Pod
 metadata:
   annotations:
     foo: bar
-    config.linkerd.io/skip-inbound-ports: true
+    config.linkerd.io/skip-inbound-ports: "true"
   name: badpod01
 spec:
   containers:
@@ -14,7 +14,7 @@ apiVersion: v1
 kind: Pod
 metadata:
   annotations:
-    config.linkerd.io/skip-outbound-ports: true
+    config.linkerd.io/skip-outbound-ports: "true"
     foo: bar
   name: badpod02
 spec:
@@ -27,8 +27,8 @@ kind: Pod
 metadata:
   annotations:
     foo: bar
-    config.linkerd.io/skip-outbound-ports: true
-    config.linkerd.io/skip-inbound-ports: true
+    config.linkerd.io/skip-outbound-ports: "true"
+    config.linkerd.io/skip-inbound-ports: "true"
   name: badpod03
 spec:
   containers:
