--- a/linkerd-cel/prevent-linkerd-port-skipping/prevent-linkerd-port-skipping.yaml
+++ b/linkerd-cel/prevent-linkerd-port-skipping/prevent-linkerd-port-skipping.yaml
@@ -3,17 +3,19 @@ kind: ClusterPolicy
 metadata:
   name: prevent-linkerd-port-skipping
   annotations:
-    policies.kyverno.io/title: Prevent Linkerd Port Skipping
-    policies.kyverno.io/category: Linkerd
+    policies.kyverno.io/title: Prevent Linkerd Port Skipping in CEL expressions
+    policies.kyverno.io/category: Linkerd in CEL 
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Pod
+    policies.kyverno.io/minversion: 1.11.0
+    kyverno.io/kubernetes-version: "1.26-1.27"
     policies.kyverno.io/description: >-
       Linkerd has the ability to skip inbound and outbound ports assigned to Pods, exempting
       them from mTLS. This can be important in some narrow use cases but
       generally should be avoided. This policy prevents Pods from setting
       the annotations `config.linkerd.io/skip-inbound-ports` or `config.linkerd.io/skip-outbound-ports`.
 spec:
-  validationFailureAction: audit
+  validationFailureAction: Audit
   background: true
   rules:
   - name: pod-prevent-port-skipping
@@ -23,9 +25,10 @@ spec:
           kinds:
           - Pod
     validate:
-      message: "Pods may not skip ports. The annotations `config.linkerd.io/skip-inbound-ports` or `config.linkerd.io/skip-outbound-ports` must not be set."
-      pattern:
-        metadata:
-          =(annotations):
-            X(config.linkerd.io/skip-inbound-ports): "null"
-            X(config.linkerd.io/skip-outbound-ports): "null"
+      cel:
+        expressions:
+          - expression: >-
+              !has(object.metadata.annotations) || 
+              (!('config.linkerd.io/skip-inbound-ports' in object.metadata.annotations) && !('config.linkerd.io/skip-outbound-ports' in object.metadata.annotations))
+            message: "Pods may not skip ports. The annotations `config.linkerd.io/skip-inbound-ports` or `config.linkerd.io/skip-outbound-ports` must not be set."
+
