--- a/linkerd-cel/require-linkerd-mesh-injection/require-linkerd-mesh-injection.yaml
+++ b/linkerd-cel/require-linkerd-mesh-injection/require-linkerd-mesh-injection.yaml
@@ -3,16 +3,18 @@ kind: ClusterPolicy
 metadata:
   name: require-linkerd-mesh-injection
   annotations:
-    policies.kyverno.io/title: Require Linkerd Mesh Injection
-    policies.kyverno.io/category: Linkerd
+    policies.kyverno.io/title: Require Linkerd Mesh Injection in CEL expressions
+    policies.kyverno.io/category: Linkerd in CEL 
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Namespace, Annotation
+    policies.kyverno.io/minversion: 1.11.0
+    kyverno.io/kubernetes-version: "1.26-1.27"
     policies.kyverno.io/description: >-
       Sidecar proxy injection in Linkerd may be handled at the Namespace level by
       setting the annotation `linkerd.io/inject` to `enabled`. This policy enforces that
       all Namespaces contain the annotation `linkerd.io/inject` set to `enabled`.
 spec:
-  validationFailureAction: audit
+  validationFailureAction: Audit
   background: true
   rules:
   - name: require-mesh-annotation
@@ -22,8 +24,8 @@ spec:
           kinds:
           - Namespace
     validate:
-      message: "All Namespaces must set the annotation `linkerd.io/inject` to `enabled`."
-      pattern:
-        metadata:
-          annotations:
-            linkerd.io/inject: enabled
+      cel:
+        expressions:
+          - expression: "has(object.metadata.annotations) && 'linkerd.io/inject' in object.metadata.annotations && object.metadata.annotations['linkerd.io/inject'] == 'enabled'"
+            message: "All Namespaces must set the annotation `linkerd.io/inject` to `enabled`."
+
