--- a/nginx-ingress-cel/restrict-annotations/restrict-annotations.yaml
+++ b/nginx-ingress-cel/restrict-annotations/restrict-annotations.yaml
@@ -3,13 +3,13 @@ kind: ClusterPolicy
 metadata:
   name: restrict-annotations
   annotations:
-    policies.kyverno.io/title: Restrict NGINX Ingress annotation values 
-    policies.kyverno.io/category: Security, NGINX Ingress
+    policies.kyverno.io/title: Restrict NGINX Ingress annotation values in CEL expressions 
+    policies.kyverno.io/category: Security, NGINX Ingress in CEL 
     policies.kyverno.io/severity: high
     policies.kyverno.io/subject: Ingress
-    policies.kyverno.io/minversion: "1.6.0"
-    kyverno.io/kyverno-version: "1.6.0"
-    kyverno.io/kubernetes-version: "1.23"
+    policies.kyverno.io/minversion: "1.11.0"
+    kyverno.io/kyverno-version: "1.11.0"
+    kyverno.io/kubernetes-version: "1.26-1.27"
     policies.kyverno.io/description: >-
       This policy mitigates CVE-2021-25746 by restricting `metadata.annotations` to safe values.
       See: https://github.com/kubernetes/ingress-nginx/blame/main/internal/ingress/inspector/rules.go.
@@ -17,7 +17,7 @@ metadata:
       "annotation-value-word-blocklist" configuration setting is also recommended. 
       Please refer to the CVE for details. 
 spec:
-  validationFailureAction: enforce
+  validationFailureAction: Enforce
   rules:
     - name: check-ingress
       match:
@@ -26,23 +26,16 @@ spec:
             kinds:
             - networking.k8s.io/v1/Ingress
       validate:
-        message: "spec.rules[].http.paths[].path value is not allowed"
-        deny:
-          conditions:
-            any:
-            - key: "{{request.object.metadata.annotations.values(@)[].regex_match('\\s*alias\\s*.*;', @)}}"
-              operator: AnyIn
-              value: [true]
-            - key: "{{request.object.metadata.annotations.values(@)[].regex_match('\\s*root\\s*.*;', @)}}"
-              operator: AnyIn
-              value: [true]    
-            - key: "{{request.object.metadata.annotations.values(@)[].regex_match('/etc/(passwd|shadow|group|nginx|ingress-controller)', @)}}"
-              operator: AnyIn
-              value: [true]     
-            - key: "{{request.object.metadata.annotations.values(@)[].regex_match('/var/run/secrets', @)}}"
-              operator: AnyIn
-              value: [true]  
-            - key: "{{request.object.metadata.annotations.values(@)[].regex_match('.*_by_lua.*', @)}}"
-              operator: AnyIn
-              value: [true]
+        cel:
+          expressions:
+            - expression: >-
+                !has(object.metadata.annotations) ||
+                (
+                  !object.metadata.annotations.exists(annotation, object.metadata.annotations[annotation].matches('\\s*alias\\s*.*;')) &&
+                  !object.metadata.annotations.exists(annotation, object.metadata.annotations[annotation].matches('\\s*root\\s*.*;')) &&
+                  !object.metadata.annotations.exists(annotation, object.metadata.annotations[annotation].matches('/etc/(passwd|shadow|group|nginx|ingress-controller)')) &&
+                  !object.metadata.annotations.exists(annotation, object.metadata.annotations[annotation].matches('/var/run/secrets')) &&
+                  !object.metadata.annotations.exists(annotation, object.metadata.annotations[annotation].matches('.*_by_lua.*'))
+                )
+              message: "spec.rules[].http.paths[].path value is not allowed"
 
