--- a/nginx-ingress/restrict-ingress-paths/.kyverno-test/kyverno-test.yaml
+++ b/nginx-ingress/restrict-ingress-paths/.kyverno-test/kyverno-test.yaml
@@ -12,6 +12,7 @@ results:
   resources:
   - bad-path-root
   - bad-path-etc
+  - bad-path-etc-kubernetes
   - bad-path-serviceaccount
   - bad-path-secrets
   result: fail
