remove comments for CI tests
Signed-off-by: Chandan-DK <chandandk468@gmail.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -65,10 +65,10 @@ jobs:
           - ^psa$
           - ^psa-cel$
           - ^psp-migration$
-          # - ^tekton
-          # - ^traefik
-          # - ^traefik-cel
-          # - ^velero
+          - ^tekton$
+          - ^traefik$
+          - ^traefik-cel$
+          - ^velero$
     runs-on: ubuntu-latest
     name: ${{ matrix.k8s-version.name }} - ${{ matrix.tests }}
     steps:
