--- a/openshift-cel/disallow-self-provisioner-binding/.chainsaw-test/chainsaw-test.yaml
+++ b/openshift-cel/disallow-self-provisioner-binding/.chainsaw-test/chainsaw-test.yaml
@@ -15,7 +15,7 @@ spec:
   - name: step-02
     try:
     - apply:
-        file: chainsaw-step-02-apply-1.yaml
+        file: crb.yaml
   - name: step-03
     try:
     - apply:
