--- a/traefik-cel/disallow-default-tlsoptions/.chainsaw-test/chainsaw-test.yaml
+++ b/traefik-cel/disallow-default-tlsoptions/.chainsaw-test/chainsaw-test.yaml
@@ -9,7 +9,7 @@ spec:
   - name: step-00
     try:
     - assert:
-        file: chainsaw-step-00-assert-1.yaml
+        file: crd-assert.yaml
   - name: step-01
     try:
     - apply:
@@ -23,7 +23,7 @@ spec:
           spec:
             validationFailureAction: Enforce
     - assert:
-        file: chainsaw-step-01-assert-1.yaml
+        file: policy-ready.yaml
   - name: step-02
     try:
     - script:
@@ -68,9 +68,9 @@ spec:
   - name: step-03
     try:
     - apply:
-        file: chainsaw-step-03-apply-1.yaml
+        file: cr.yaml
     - apply:
-        file: chainsaw-step-03-apply-2.yaml
+        file: crb.yaml
   - name: step-04
     try:
     - script:
