--- a/tekton-cel/require-tekton-bundle/.chainsaw-test/chainsaw-test.yaml
+++ b/tekton-cel/require-tekton-bundle/.chainsaw-test/chainsaw-test.yaml
@@ -9,9 +9,9 @@ spec:
   - name: step-00
     try:
     - assert:
-        file: chainsaw-step-00-assert-1.yaml
+        file: crd-taskrun-assert.yaml
     - assert:
-        file: chainsaw-step-00-assert-2.yaml
+        file: crd-pipelinerun-assert.yaml
   - name: step-01
     try:
     - apply:
@@ -25,7 +25,7 @@ spec:
           spec:
             validationFailureAction: Enforce
     - assert:
-        file: chainsaw-step-01-assert-1.yaml
+        file: policy-ready.yaml
   - name: step-02
     try:
     - apply:
