--- a/velero-cel/validate-cron-schedule/.chainsaw-test/chainsaw-test.yaml
+++ b/velero-cel/validate-cron-schedule/.chainsaw-test/chainsaw-test.yaml
@@ -9,7 +9,7 @@ spec:
   - name: step-00
     try:
     - assert:
-        file: chainsaw-step-00-assert-1.yaml
+        file: crd-schedule-assert.yaml
   - name: step-01
     try:
     - apply:
@@ -23,7 +23,7 @@ spec:
           spec:
             validationFailureAction: Enforce
     - assert:
-        file: chainsaw-step-01-assert-1.yaml
+        file: policy-ready.yaml
   - name: step-02
     try:
     - apply:
