add CI tests for cel folders
Signed-off-by: Chandan-DK <chandandk468@gmail.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -61,9 +61,12 @@ jobs:
           - ^pod-security-cel$
           - ^psa$
           - ^psp-migration$
-          # - ^tekton
-          # - ^traefik
-          # - ^velero
+          - ^psp-migration-cel$
+          - ^tekton$
+          - ^tekton-cel$
+          - ^traefik$
+          - ^velero$
+          - ^velero-cel$
     runs-on: ubuntu-latest
     name: ${{ matrix.k8s-version.name }} - ${{ matrix.tests }}
     steps:
